<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (c) 2021, 2022 University of York and others
This program and the accompanying materials are made available
under the terms of the Eclipse Public License 2.0 which is available at
http://www.eclipse.org/legal/epl-2.0.

SPDX-License-Identifier: EPL-2.0
-->
<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>robostar.robocert</groupId>
  <artifactId>robostar.robocert.parent</artifactId>
  <version>0.2.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <tycho.version>2.7.4</tycho.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <eclipse-repo.url>http://download.eclipse.org/releases/2021-12</eclipse-repo.url>
    <xtext.version>2.27.0</xtext.version>
  </properties>

  <modules>
    <module>robostar.robocert</module>
    <module>robostar.robocert.edit</module>
    <module>robostar.robocert.editor</module>
    <module>robostar.robocert.tests</module>
    <module>robostar.robocert.feature</module>
    <module>robostar.robocert.update</module>
  </modules>

  <repositories>
    <repository>
      <id>eclipse-release</id>
      <url>${eclipse-repo.url}</url>
      <layout>p2</layout>
    </repository>
    <!-- Used for picking up hamcrest 2 -->
    <repository>
      <id>eclipse-orbit</id>
      <url>https://download.eclipse.org/tools/orbit/downloads/drops/R20210825222808/repository/</url>
      <layout>p2</layout>
    </repository>
    <repository>
      <id>robochart-metamodel</id>
      <url>https://robostar.cs.york.ac.uk/robotool/metamodel/update/</url>
      <layout>p2</layout>
    </repository>
  </repositories>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-p2-director-plugin</artifactId>
          <version>${tycho.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>
      <!--Enable the replacement of the SNAPSHOT version in the final product configuration-->
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-packaging-plugin</artifactId>
        <version>${tycho.version}</version>
        <executions>
          <execution>
            <phase>package</phase>
            <id>package-feature</id>
            <configuration>
              <finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-source-plugin</artifactId>
        <version>${tycho.version}</version>
        <executions>
          <execution>
            <id>plugin-source</id>
            <goals>
              <goal>plugin-source</goal>
            </goals>
          </execution>
          <execution>
            <id>feature-source</id>
            <goals>
              <goal>feature-source</goal>
            </goals>
            <configuration>
              <excludes>
                <!-- provide plug-ins not containing any source code -->
                <plugin id="robostar.robocert.update"/>
              </excludes>
            </configuration>
          </execution>

        </executions>
      </plugin>

      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-p2-plugin</artifactId>
        <version>${tycho.version}</version>
        <executions>
          <execution>
            <id>attach-p2-metadata</id>
            <phase>package</phase>
            <goals>
              <goal>p2-metadata</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
